--- a/website/style.css
+++ b/website/style.css
@@ -8,7 +8,7 @@ body{
     grid-auto-rows: minmax(150px, auto);
     /* grid-template-columns:  */
     height:100vh;
-    background: #f23557;
+    background: #ffffff;
     color: #f0d43a;
     justify-content: center;
     grid-gap: 1em;
@@ -17,7 +17,11 @@ body{
 }
 
 .holder{
-
+    border: 2px solid black;
+    border-radius: 8px;
+    padding: 20px;
+    margin: 8px;
+    background-color: #3b0088;
 }
 
 .entry{
@@ -25,6 +29,12 @@ body{
 }
 
 #entryHolder{
+    border: none;
+    border-radius: 8px;
+    padding: 20px;
+    margin: 8px;
+    background-color: #3b0088;
+    color: white;
 
 }
 
@@ -41,7 +51,7 @@ body{
 }
 
 .headline {
-
+    font: 28px bold;
 }
 .title{
 
@@ -55,24 +65,28 @@ label{
 
 input{
     display:block;
-    height: 60px;
+    height: 40px;
     width: 320px;
     background:#22b2da;
     color: #f0d43a;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
     border: none;
+    border-radius: 12px;
+    padding: 6px;
+    margin: 4px;
 }
 
 button{
-    width: 400px;
-    height: 100px;
-    background: #3b4a6b;
+    width: 250px;
+    height: 60px;
+    background: #343435;
     color: #f0d43a;
     font-size: 26px;
     font-family: 'Oswald', sans-serif;
     border: none;
-    box-shadow: 2px 4px 5px #444;
+    border-radius: 8px;
+    box-shadow: 2px 4px 5px rgb(46, 46, 46);
 }
 h1{
     font-size: 36px;
@@ -83,6 +97,8 @@ textarea{
     color: #f0d43a;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
+    border-radius: 8px;
+    margin: 14px;
 }
 /* Reset style for HTML element on active to have no border*/
 input:focus,
