--- a/website/style.css
+++ b/website/style.css
@@ -1,7 +1,7 @@
 body{
     background: #fffff8;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    background: url('images/sky.jpg');
+    background-image: url('../images/sky.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
@@ -9,6 +9,7 @@ body{
     -o-background-size: cover;
     background-size: cover;
     margin: 0;
+    min-height: 100%;
 
 }
 
@@ -23,6 +24,7 @@ body{
     grid-gap: 1em;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
+    
 }
 
 .holder{
@@ -48,11 +50,13 @@ body{
 }
 
 #date{
-
+    padding: 4px;
+    margin: 4px;
 }
 
 #temp{
-
+    padding: 4px;
+    margin: 4px;
 }
 
 #content{
