--- a/website/style.css
+++ b/website/style.css
@@ -1,7 +1,6 @@
 body{
-    background: #fffff8;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-    background-image: url('../images/sky.jpg');
+    background-image: url('sky.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
@@ -18,7 +17,6 @@ body{
     grid-auto-rows: minmax(150px, auto);
     /* grid-template-columns:  */
     height:100vh;
-    background: #ffffff;
     color: #f0d43a;
     justify-content: center;
     grid-gap: 1em;
@@ -64,11 +62,11 @@ body{
 
 }
 
-.headline {
+#headline {
     font: 45px bold 'Rubik', sans-serif;
 }
 .title{
-
+    font: 30px bold 'Rubik', sans-serif;
 }
 
 /*  Basic Styling To Override Default For Basic HTML Elements */
@@ -81,8 +79,8 @@ input{
     display:block;
     height: 40px;
     width: 320px;
-    background:#22b2da;
-    color: #f0d43a;
+    background:#7a87fd;
+    color: #000000;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
     border: none;
@@ -108,7 +106,7 @@ h1{
 
 textarea{
     background:#22b2da;
-    color: #f0d43a;
+    color: #000000;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
     border-radius: 8px;
