--- a/website/style.css
+++ b/website/style.css
@@ -23,14 +23,18 @@ body{
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
     
+    
 }
 
 .holder{
-    border: 2px solid black;
+    border: 1px solid inherit;
     border-radius: 8px;
     padding: 14px;
     margin: 8px;
     background-color: #3b0088;
+    -webkit-box-shadow: 0px 10px 45px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 10px 45px -2px rgba(0,0,0,0.75);
+    box-shadow: 0px 10px 45px -2px rgba(0,0,0,0.75);
 }
 
 .entry{
@@ -63,10 +67,12 @@ body{
 }
 
 #headline {
-    font: 45px bold 'Rubik', sans-serif;
+    font: bold 45px 'Rubik', sans-serif;
+    text-align: center;
 }
 .title{
-    font: 30px bold 'Rubik', sans-serif;
+    font: bold 30px 'Rubik', sans-serif;
+    text-align: center;
 }
 
 /*  Basic Styling To Override Default For Basic HTML Elements */
@@ -105,7 +111,7 @@ h1{
 }
 
 textarea{
-    background:#22b2da;
+    background:#7a87fd;
     color: #000000;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
